
- Made string.strip() work as documented.

- Implemented some additional restrictions on __class__ assignment.

- SF #630824: added keyword 'yield' to pydoc.py.

- SF #626172: fix crash using Unicode Latin-1 single character.

- SF #570655: fix misleading option text in distutils rpm creation.

- SF #624982: fix potential segfault in slot_sq_item.

- New codec for Ukrainian Cyrillic.


What's New in Python 2.2.2 (final) ?
Release date: 14-Oct-2002
====================================

Almost everything in this release is a pure bugfix and is backported
from a corresponding bugfix already applied to Python 2.3.  While at
the time of writing, Python 2.3 is still in pre-alpha form, only
accessible via CVS, it receives continuous and extensive testing by
its developers.  The list below is not a complete list of fixed bugs;
it only lists fixed bugs that someone might be interested in hearing
about.  Documentation fixes are not listed.

Tip: to quickly find SourceForge bug or patch NNNNNN, use an URL of
the form www.python.org/sf/NNNNNN.

Here are all the changes since the 2.2.2b1 release last week, except
for documentation changes.  Below it are the (much more numerous!)
changes since the 2.2.1 release in April.

Core and builtins

- In listobject.c and tupleobject.c: added overflow checks for
  list*int, list+list, and tuple+tuple.

- In object.c: changed misleading SystemError exceptions raised in
  PyObject_Init() and PyObject_InitVar() to MemoryError.

- In stringobject.c: added an overflow check to string formatting;
  this example could segfault: '%2147483647d' % -1.  [SF bug 618623]

- In typeobject.c: removed COPYSLOT(tp_dictoffset) from
  inherit_slots().  For more info, read this python-dev thread:
  http://mail.python.org/pipermail/python-dev/2002-October/029502.html

- In stringobject.c: fixed another string formatting nit: "%r" % u"..."
  would return a Unicode string, even though repr(u"...")  returns an